<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_copy_all"
        android:title="@string/txt_menu_copy_all" />

    <item
        android:id="@+id/menu_copy_name"
        android:title="@string/txt_menu_copy_name" />

    <item
        android:id="@+id/menu_copy_email"
        android:title="@string/txt_menu_email" />

    <item
        android:id="@+id/menu_date_time"
        android:title="@string/txt_menu_date_and_time">

        <!--sub menu-->
        <menu>
            <item
                android:id="@+id/menu_date"
                android:title="@string/txt_menu_date" />
            <item
                android:id="@+id/menu_time"
                android:title="@string/txt_menu_time" />
        </menu>
    </item>


</menu>